fix: gap in user button

--- a/src/components/User/Button/index.module.scss
+++ b/src/components/User/Button/index.module.scss
@@ -1,7 +1,7 @@
 .userButton {
 	display: flex;
 	border-radius: 6px;
-	gap: 8px;
+	gap: 10px;
 	cursor: pointer;
 	overflow: hidden;
 
